--- a/_includes/logos.html
+++ b/_includes/logos.html
@@ -1,23 +1,37 @@
-<div class="row">
-    <div class="w-50 logos">
-        <img src="{{'/assets/images/logos/bmbf.png' | absolute_url}}" class="img-fluid m-3"/>
-        <a href="https://toolbox.decodingspaces.net/" class="">
-            <img src="{{'/assets/images/logos/decodingspaces.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-        <a href="https://uni-weimar.de/infar">
-            <img src="{{'/assets/images/logos/infar.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-        <a href="https://www.uni-weimar.de/de/architektur-und-urbanistik/institute/bauhaus-ifex/">
-            <img src="{{'/assets/images/logos/iudd.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-        <a href="https://www.uni-weimar.de/de/architektur-und-urbanistik/institute/bauhaus-ifex/">
-            <img src="{{'/assets/images/logos/ifex.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-        <a href="https://www.uni-weimar.de/ecl-aa">
-            <img src="{{'/assets/images/logos/eclaa.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-        <a href="https://www.uni-weimar.de">
-            <img src="{{'/assets/images/logos/buw.png' | absolute_url}}" class="img-fluid m-3"/>
-        </a>
-    </div>
+<div class="row logos">
+            <div class="col">
+                <a href="https://www.uni-weimar.de">
+                    <img src="{{'/assets/images/logos/buw.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://www.uni-weimar.de/ecl-aa">
+                    <img src="{{'/assets/images/logos/eclaa.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://www.uni-weimar.de/de/architektur-und-urbanistik/institute/bauhaus-ifex/">
+                    <img src="{{'/assets/images/logos/ifex.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://uni-weimar.de/infar">
+                    <img src="{{'/assets/images/logos/infar.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://www.uni-weimar.de/de/architektur-und-urbanistik/institute/bauhaus-ifex/">
+                    <img src="{{'/assets/images/logos/iudd.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
+            <div class="col">
+                <a href="https://toolbox.decodingspaces.net/" class="">
+                    <img src="{{'/assets/images/logos/decodingspaces.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>           
+            <div class="col">
+                <a href="https://www.bmbf.de" class="">
+                    <img src="{{'/assets/images/logos/bmbf.png' | absolute_url}}" class="img-fluid m-3"/>
+                </a>
+            </div>
 </div>
