--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -7,7 +7,7 @@ layout: default
         <h1>{{ page.title }}</h1>
     </div>
     <div class="col-12">
-    <div class="col-12 col-sm-8 col-md-6 float-left p-5">
+    <div class="col-12 col-sm-8 col-md-6 float-right p-5">
         {% if page.image %}
             <img src="{{ page.url | absolute_url }}{{ page.image }}" class="img-fluid" />
         {% endif %}
