--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -5,29 +5,24 @@ layout: default
 {% assign child_modules = site.pages | where_exp: "item", "item.url contains page.url" | where_exp: "item", "item.layout contains layout_type"%}
 {% assign tags = child_modules | map: "tags" | uniq | compact %}
 
-<h1>{{ page.title }}</h1>
-
-{{ content }}
-
-
 <div class="button-group filter-button-group">
     <h3>Filter</h3>
+    <!--<button type="button" class="btn btn-primary btn-sm" data-filter="*">All</button>-->
     {% for tag in tags %}
-    <button type="button" class="btn btn-secondary" data-filter=".{{ tag | remove:' ' }}">
+    <button type="button" class="btn btn-secondary btn-sm" data-filter=".{{ tag | remove:' ' }}">
        {{ tag }}
     </button>
     {% endfor %}
-    <button type="button" class="btn btn-primary" data-filter="*">All</button>
   </div>
-  
+  <!--SORTING
   <div class="button-group sort-by-button-group">
     <h3>Sort</h3>
-    <button type="button" class="btn btn-primary" data-sort-by="original-order">Normal</button>
-    <button type="button" class="btn btn-secondary" data-sort-by="title">Name</button>
-    <button type="button" class="btn btn-secondary" data-sort-by="tag">Tag</button>
+    <button type="button" class="btn btn-primary btn-sm" data-sort-by="original-order">Normal</button>
+    <button type="button" class="btn btn-secondary btn-sm" data-sort-by="title">Name</button>
+    <button type="button" class="btn btn-secondary btn-sm" data-sort-by="tag">Tag</button>
     </div>
   </div>
-
+  -->
   <div class="module-filter">
     {% for module in child_modules %}
     <div class="module-item {% for tag in module.tags %}{{tag | remove:' '}} {% endfor%}" data-tag="{% for tag in module.tags %}{{tag | remove:' '}}{% endfor%}" data-title="{{ module.title | remove: ' '}}">
@@ -47,6 +42,7 @@ layout: default
         layoutMode: 'masonry',
         masonry: {
             columnWidth: 240,
+            fitWidth: true
         },
         getSortData: {
           title: '[data-title]', 
@@ -65,16 +61,39 @@ layout: default
           $(this).addClass('btn-primary');
       });
       /* filtering */
-      $('.filter-button-group').on( 'click', 'button', function() {
-        var filterValue = $(this).attr('data-filter');
-        $moduleFilter.isotope({ filter: filterValue });
-        $moduleFilter.isotope('updateSortData').isotope();
-      });
+
+      var filters = [];
+      function addFilter( filter ) {
+        if ( filters.indexOf( filter ) == -1 ) {
+          filters.push( filter );
+        }
+      }
+
+      function removeFilter( filter ) {
+        var index = filters.indexOf( filter);
+        if ( index != -1 ) {
+          filters.splice( index, 1 );
+        }
+      }
       $('.filter-button-group button.btn').on('click', function(){
-          $('.filter-button-group button.btn').removeClass('btn-primary');
-          $('.filter-button-group button.btn').addClass('btn-secondary');
+        $(this).toggleClass('is-checked');
+        /*$(this).button('toggle');*/
+        var isChecked = $(this).hasClass('is-checked');
+        var filter = $(this).attr('data-filter');
+        if ( isChecked ) {
           $(this).removeClass('btn-secondary');
           $(this).addClass('btn-primary');
+           addFilter( filter );
+        } else {
+          $(this).removeClass('btn-primary');
+          $(this).addClass('btn-secondary');
+          removeFilter( filter );
+        }
+        /*filter isotope*/
+        /* group filters together, inclusive*/
+        $moduleFilter.isotope({ filter: filters.join(',') });
+        $moduleFilter.isotope('updateSortData').isotope();
+
       });
     });
 
@@ -84,7 +103,7 @@ layout: default
     .module-item {
         float: left;
         width: 240px;
-        height: 240px;
+        height: 300px;
     }
 
     .module-item--width2 { width: 480px; }
