--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -18,31 +18,27 @@
   display: flex;
   height: 100%;
   padding: $sp-2;
-  background-color: $search-background-color;
+  /*background-color: $search-background-color;
   border-radius: $border-radius;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);*/
 
   @include mq(md) {
-    padding-top: 0;
+   /* padding-top: 0;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
     background-color: $body-background-color;
     border-radius: 0;
-    box-shadow: none;
+    box-shadow: none;*/
   }
 }
 
 .search-input {
   align-self: center;
   width: 100%;
-  padding-top: $sp-1;
+ /*padding-top: $sp-1;
   padding-bottom: $sp-1;
-  background-color: $search-background-color;
-  border-top: 0;
-  border-right: 0;
-  border-bottom: 0;
-  border-left: 0;
+  background-color: $search-background-color;*/
   order: 2;
   @include fs-4;
 
@@ -56,7 +52,7 @@
   }
 
   @include mq(md) {
-    background-color: $body-background-color;
+   /* background-color: $body-background-color;*/
     @include fs-3;
   }
 }
