remove custom button styling

--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -2,7 +2,7 @@
 // Buttons and things that look like buttons
 //
 // stylelint-disable color-named
-
+/*
 .btn {
   display: inline-block;
   box-sizing: border-box;
@@ -116,3 +116,4 @@
 .btn-green {
   @include btn-color($white, $green-100);
 }
+*/
