--- a/_sass/support/mixins/_buttons.scss
+++ b/_sass/support/mixins/_buttons.scss
@@ -1,5 +1,5 @@
 // Colored button
-
+/*
 @mixin btn-color($fg, $bg) {
   color: $fg;
   background-color: darken($bg, 2%);
@@ -24,4 +24,4 @@
   &.selected:hover {
     background-color: darken($bg, 10%);
   }
-}
+}*/
