css styling header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,14 @@ layout: table_wrappers
   <div class="page-wrap">
     <div class="main-content-wrap js-main-content" tabindex="0">
       <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
+      <nav class="navbar navbar-expand-lg fixed-top bg-white text-primary">
         <a class="navbar-brand" href="#">{% include title.html %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto text-uppercase">
             <li class="nav-item active">
               <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}">Home <span class="sr-only">(current)</span></a>
             </li>
