--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,31 +4,51 @@ layout: default
 {% assign layout_type = 'module' %}
 {% assign child_modules = site.pages | where_exp: "item", "item.url contains page.url" | where_exp: "item", "item.layout contains layout_type"%}
 {% assign tags = child_modules | map: "tags" | uniq | compact %}
+<div class="row">
+  <div class="col-8">
+    <div class="button-group filter-button-group">
+        <span class="text-small text-grey-dk-100">Filter by categories</span>
+        <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="search-icon"><title>Filter</title><path d="M2.75 6a.75.75 0 000 1.5h18.5a.75.75 0 000-1.5H2.75zM6 11.75a.75.75 0 01.75-.75h10.5a.75.75 0 010 1.5H6.75a.75.75 0 01-.75-.75zm4 4.938a.75.75 0 01.75-.75h2.5a.75.75 0 010 1.5h-2.5a.75.75 0 01-.75-.75z"></path></svg> 
+        {% for tag in tags %}
+        <button type="button" class="btn btn-outline-primary btn-sm" data-filter=".{{ tag | remove:' ' }}">
+          {{ tag }}
+        </button>
+        {% endfor %}
+    </div>
+    <!--SORTING
+    <div class="button-group sort-by-button-group">
+      <h3>Sort</h3>
+      <button type="button" class="btn btn-primary btn-sm" data-sort-by="original-order">Normal</button>
+      <button type="button" class="btn btn-outline-primary btn-sm" data-sort-by="title">Name</button>
+      <button type="button" class="btn btn-outline-primary btn-sm" data-sort-by="tag">Tag</button>
+      </div>
+    </div>
+    -->
+    </div>
+    <div class="col-4">
+    {% if site.search_enabled != false %}
+    <div class="search">
+          <div class="search-input-wrap form-inline justify-content-end">
+            <input type="text" class="js-search-input search-input form-control form-control-sm" tabindex="0" placeholder="Search" aria-label="Search" autocomplete="off">
+            <svg width="14" height="14" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg" class="search-icon"><title>Search</title><g fill-rule="nonzero"><path d="M17.332 20.735c-5.537 0-10-4.6-10-10.247 0-5.646 4.463-10.247 10-10.247 5.536 0 10 4.601 10 10.247s-4.464 10.247-10 10.247zm0-4c3.3 0 6-2.783 6-6.247 0-3.463-2.7-6.247-6-6.247s-6 2.784-6 6.247c0 3.464 2.7 6.247 6 6.247z"/><path d="M11.672 13.791L.192 25.271 3.02 28.1 14.5 16.62z"/></g></svg>
+          </div>
+        <div class="js-search-results search-results-wrap"></div>
+      </div>
 
-<div class="button-group filter-button-group">
-    <h3>Filter</h3>
-    <!--<button type="button" class="btn btn-secondary btn-sm" data-filter="*">All</button>-->
-    {% for tag in tags %}
-    <button type="button" class="btn btn-primary btn-sm" data-filter=".{{ tag | remove:' ' }}">
-       {{ tag }}
-    </button>
-    {% endfor %}
-  </div>
-  <!--SORTING
-  <div class="button-group sort-by-button-group">
-    <h3>Sort</h3>
-    <button type="button" class="btn btn-secondary btn-sm" data-sort-by="original-order">Normal</button>
-    <button type="button" class="btn btn-primary btn-sm" data-sort-by="title">Name</button>
-    <button type="button" class="btn btn-primary btn-sm" data-sort-by="tag">Tag</button>
+      {% endif %}
+    
     </div>
   </div>
-  -->
-  <div class="module-filter">
-    {% for module in child_modules %}
-    <div class="module-item {% for tag in module.tags %}{{tag | remove:' '}} {% endfor%}" data-tag="{% for tag in module.tags %}{{tag | remove:' '}}{% endfor%}" data-title="{{ module.title | remove: ' '}}">
-            {% include card.html title=module.title url= module.url image=module.image %}
+  <div class="row">
+    <div class="col-12">
+      <div class="module-filter mx-auto">
+        {% for module in child_modules %}
+        <div class="module-item {% for tag in module.tags %}{{tag | remove:' '}} {% endfor%}" data-tag="{% for tag in module.tags %}{{tag | remove:' '}}{% endfor%}" data-title="{{ module.title | remove: ' '}}">
+                {% include card.html title=module.title url= module.url image=module.image %}
+        </div>
+        {% endfor %}
+      </div>
     </div>
-    {% endfor %}
   </div>
 
 
@@ -55,10 +75,10 @@ layout: default
         $moduleFilter.isotope({ sortBy: sortByValue });
       });
       $('.sort-by-button-group button.btn').on('click', function(){
-          $('.sort-by-button-group button.btn').removeClass('btn-secondary');
-          $('.sort-by-button-group button.btn').addClass('btn-primary');
-          $(this).removeClass('btn-primary');
-          $(this).addClass('btn-secondary');
+          $('.sort-by-button-group button.btn').removeClass('btn-primary');
+          $('.sort-by-button-group button.btn').addClass('btn-outline-primary');
+          $(this).removeClass('btn-outline-primary');
+          $(this).addClass('btn-primary');
       });
       /* filtering */
 
@@ -81,12 +101,12 @@ layout: default
         var isChecked = $(this).hasClass('is-checked');
         var filter = $(this).attr('data-filter');
         if ( isChecked ) {
-          $(this).removeClass('btn-primary');
-          $(this).addClass('btn-secondary');
+          $(this).removeClass('btn-outline-primary');
+          $(this).addClass('btn-primary');
            addFilter( filter );
         } else {
-          $(this).removeClass('btn-secondary');
-          $(this).addClass('btn-primary');
+          $(this).removeClass('btn-primary');
+          $(this).addClass('btn-outline-primary');
           removeFilter( filter );
         }
         /*filter isotope*/
