--- a/_sass/bootstrap/_navbar.scss
+++ b/_sass/bootstrap/_navbar.scss
@@ -138,6 +138,7 @@
   content: "";
   background: no-repeat center center;
   background-size: 100% 100%;
+  background-image: escape-svg($navbar-light-toggler-icon-bg);
 }
 
 // Generate series of `.navbar-expand-*` responsive classes for configuring
