--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -17,7 +17,7 @@
 .search-input-wrap {
   display: flex;
   height: 100%;
-  padding: $sp-2;
+  padding: 0;
   /*background-color: $search-background-color;
   border-radius: $border-radius;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);*/
