--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ layout: table_wrappers
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="justify-content-between container">
-          <a class="navbar-brand text-petitecaps" href="{{site.url}}{{site.baseurl}}">{% include title.html %}</a>
+          <a class="navbar-brand text-petitecaps fs-6" href="{{site.url}}{{site.baseurl}}">{% include title.html %}</a>
           <ul class="navbar-nav ml-auto text-uppercase">
             <li class="nav-item active">
               <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}">Home <span class="sr-only">(current)</span></a>
