--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row clearfix">
-    <div class="col-12">
+    <div class="col-12 pb-6">
         <h1>{{ page.title }}</h1>
     </div>
     <div class="col-12">
